Fix original version of Socket in perldelta
The upgrade from 2.020_04 to 2.025 was not noted manually in
perldelta, since there was nothing particularly noteworthy in the
update, and the comment at the top of the section says this will
happen automatically as part of the release process.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -130,7 +130,7 @@ bootstrap (.bs) files under the correct, non-edited name.
 
 =item *
 
-L<Socket> has been upgraded from version 2.025 to 2.027.
+L<Socket> has been upgraded from version 2.020_04 to 2.027.
 
 =back
 
