--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -406,9 +406,33 @@ will be fixed again for Perl 5.30.
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.27.8 represents approximately 4 weeks of development since Perl
+5.27.7 and contains approximately 33,000 lines of changes across 290 files
+from 17 authors.
 
-  perl Porting/acknowledgements.pl v5.27.7..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 25,000 lines of changes to 160 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant
+community of users and developers. The following people are known to have
+contributed the improvements that became Perl 5.27.8:
+
+Abigail, Chris 'BinGOs' Williams, Craig A. Berry, Dagfinn Ilmari Mannsåker,
+David Mitchell, Father Chrysostomos, James E Keenan, Karen Etheridge, Karl
+Williamson, Niko Tyni, Pali, Peter John Acklam, Scott Lanning, Tomasz
+Konojacki, Tom Hukins, Tony Cook, Zefram.
+
+The list above is almost certainly incomplete as it is automatically
+generated from version control history. In particular, it does not include
+the names of the (very much appreciated) contributors who reported issues to
+the Perl bug tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core. We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please
+see the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
