Perlhist entry for 5.27.8

--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -633,6 +633,7 @@ the strings?).
  Steve     5.27.5       2017-Oct-20
  Ether     5.27.6       2017-Nov-20
  BinGOs    5.27.7       2017-Dec-20
+ Abigail   5.27.8       2018-Jan-20
 
 =head2 SELECTED RELEASE SIZES
 
