George Hartzell is now a perl author

--- a/AUTHORS
+++ b/AUTHORS
@@ -438,6 +438,7 @@ Geoffrey F. Green		<geoff-public@stuebegreen.com>
 Geoffrey T. Dairiki		<dairiki@dairiki.org>
 Georg Schwarz			<geos@epost.de>
 George Greer			<perl@greerga.m-l.org>
+George Hartzell			<georgewh@gene.com>
 George Necula			<necula@eecs.berkeley.edu>
 Geraint A Edwards		<gedge@serf.org>
 Gerard Goossen			<gerard@ggoossen.net>
