POD formatting correction only.
For: RT 134053
(cherry picked from commit c509e2cacd1c085bb340266aac9708a5c3a950b6)

--- a/Porting/release_managers_guide.pod
+++ b/Porting/release_managers_guide.pod
@@ -1009,9 +1009,10 @@ Check that basic configuration and tests work on each test machine:
 
 Check that the test harness and install work on each test machine:
 
- $ make distclean
- $ ./Configure -des -Dprefix=/install/path && make all test_harness install
- $ cd /install/path
+    $ make distclean
+    $ ./Configure -des -Dprefix=/install/path && \
+          make all test_harness install
+    $ cd /install/path
 
 (Remember C<-Dusedevel> above, for a development release.)
 
