--- a/Porting/epigraphs.pod
+++ b/Porting/epigraphs.pod
@@ -19,7 +19,7 @@ Consult your favorite dictionary for details.
 
 =head2 v5.30.0-RC1 - Marcel Proust
 
-Announced on 2019-05-11 by Sawyer X
+L<Announced on 2019-05-11 by Sawyer X|https://www.nntp.perl.org/group/perl.perl5.porters/2019/05/msg254750.html>
 
   If a little dreaming is dangerous, the cure for it is not to dream
   less but to dream more, to dream all the time.
