--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -19,7 +19,7 @@ Code freezes (which happen in the 5.29.X series)
   2019-03-20  5.29.9  ✓       User-visible changes to correctly
                               functioning programs freeze
   2019-04-20  5.29.10 ✓       Full code freeze
-  2019-05-20  5.30.0          Stable release!
+  2019-05-22  5.30.0  ✓       Stable release!
 
 =head2 Perl 5.28
 
