--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -57,7 +57,7 @@ you should reset the version numbers to the next blead series.
 =head2 Perl 5.31
 
   2019-05-23  5.31.0 ✓       Sawyer X
-  2019-06-20  5.31.1
+  2019-06-20  5.31.1 ✓       Karen Etheridge
   2019-07-20  5.31.2
   2019-08-20  5.31.3
   2019-09-20  5.31.4
